<resources>
    <string name="app_name">ServicesDemo</string>
    <string name="count_tv_text">Counter:&#160;</string>
    <string name="stop_service_btn_text">Stop Service</string>
    <string name="schedule_job_wm_btn_text">Schedule Job WM</string>
    <string name="schedule_job_js_btn_text">Schedule Job JS</string>
    <string name="start_service_btn_text">Start Service</string>
    <string name="add_time_btn_text">Add Time</string>
    <string name="countdown_time_et_hint">Enter countdown time | Default - 10 seconds</string>
    <string name="countdown_time_et_empty_toast_msg">Please enter countdown time</string>
    <string name="service_not_running_toast_msg">Counter Service Not Running</string>
    <string name="service_already_running_toast_msg">Counter Service Already Running</string>
    <string name="service_stopped_toast_msg">Counter Service Stopped</string>
    <string name="alarm_menu_item">Alarm</string>
    <string name="counter_menu_item">Counter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarms_title_tv_text">Alarms</string>
</resources>