<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:context=".ui.home.MainActivity">

        <EditText
            android:id="@+id/countdown_time_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/countdown_time_et_hint"
            android:inputType="numberDecimal"
            android:textColorHint="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_time_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/add_time_btn_text"
            android:textColor="@color/green"
            android:textSize="17sp"
            app:cornerRadius="7dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/start_service_btn_text"
            android:textColor="@color/green"
            android:textSize="17sp"
            app:cornerRadius="7dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/counter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_tv_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                tools:text="2" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:text="@string/stop_service_btn_text"
            android:textColor="@color/green"
            android:textSize="17sp"
            app:cornerRadius="7dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

    </LinearLayout>
</layout>